<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/red_shade_2">

    <Button
        android:id="@+id/cancelRegistrationBtn"
        android:layout_width="320dp"
        android:layout_height="55dp"
        android:layout_marginStart="44dp"
        android:layout_marginBottom="65dp"
        android:backgroundTint="@color/red_shade_1"
        android:elevation="10dp"
        android:stateListAnimator="@null"
        android:text="@string/cancel_registration"
        android:textColor="@color/text_white"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/registerPasswordInputField"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginStart="44dp"
        android:layout_marginBottom="5dp"
        android:autoText="false"
        android:autofillHints="@string/password"
        android:background="@drawable/edit_text_background"
        android:elevation="10dp"
        android:ems="10"
        android:hint="@string/password"

        android:inputType="textPassword"
        android:maxLength="15"
        android:padding="10dp"
        android:singleLine="true"
        android:textColor="@color/text_red_half_transparent"
        android:textColorHint="@color/text_red_half_transparent"
        app:layout_constraintBottom_toTopOf="@+id/registerConfirmPasswordInputField"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/registerConfirmPasswordInputField"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginStart="44dp"
        android:layout_marginBottom="10dp"
        android:autoText="false"
        android:autofillHints="@string/confirm_password"
        android:background="@drawable/edit_text_background"
        android:elevation="10dp"
        android:ems="10"

        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:maxLength="15"
        android:padding="10dp"
        android:singleLine="true"
        android:textColor="@color/text_red_half_transparent"
        android:textColorHint="@color/text_red_half_transparent"
        app:layout_constraintBottom_toTopOf="@+id/registerButton"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/fullNameInputField"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginStart="44dp"
        android:layout_marginBottom="5dp"
        android:autofillHints="@string/full_name"
        android:background="@drawable/edit_text_background"
        android:elevation="10dp"
        android:ems="10"
        android:hint="@string/full_name"
        android:inputType="textPersonName"
        android:maxLength="15"
        android:padding="10dp"
        android:singleLine="true"

        android:textColor="@color/text_red_half_transparent"
        android:textColorHint="@color/text_red_half_transparent"
        app:layout_constraintBottom_toTopOf="@+id/emailnputField"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="320dp"
        android:layout_height="55dp"
        android:layout_marginStart="44dp"
        android:backgroundTint="@color/white_shade_1"
        android:elevation="10dp"
        android:stateListAnimator="@null"
        android:text="@string/register"
        android:textColor="@color/text_red"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toTopOf="@+id/cancelRegistrationBtn"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/emailnputField"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginStart="44dp"
        android:layout_marginBottom="5dp"
        android:autofillHints="@string/email"
        android:background="@drawable/edit_text_background"
        android:elevation="10dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textPersonName"
        android:maxLength="15"
        android:padding="10dp"

        android:singleLine="true"
        android:textColor="@color/text_red_half_transparent"
        android:textColorHint="@color/text_red_half_transparent"
        app:layout_constraintBottom_toTopOf="@+id/registerUsernameInputField"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/registerUsernameInputField"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginStart="44dp"
        android:layout_marginBottom="5dp"
        android:autofillHints="@string/username"
        android:background="@drawable/edit_text_background"
        android:elevation="10dp"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:maxLength="15"
        android:padding="10dp"

        android:singleLine="true"
        android:textColor="@color/text_red_half_transparent"
        android:textColorHint="@color/text_red_half_transparent"
        app:layout_constraintBottom_toTopOf="@+id/registerPasswordInputField"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>