<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/red_shade_2">

    <ImageView
        android:id="@+id/logo3"
        android:layout_width="75dp"
        android:layout_height="55dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/logo_svg"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2">

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/fragmentContainerView"
            android:name="com.example.exploro.controllers.MiniMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout="@layout/fragment_mini_map" />
    </LinearLayout>


    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_marginTop="75dp"
        android:clickable="true"
        android:focusableInTouchMode="true"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="20dp"
            android:clickable="true"
            android:focusableInTouchMode="true"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/createRoute"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusableInTouchMode="true"
                android:orientation="vertical">

            </LinearLayout>

            <Button
                android:id="@+id/addDestination"
                android:layout_width="260dp"
                android:layout_height="48dp"
                android:layout_below="@+id/createRoute"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:backgroundTint="@color/white_shade_1"
                android:elevation="5dp"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:stateListAnimator="@null"
                android:text="@string/add_destination"
                android:textColor="@color/red_shade_2"
                app:cornerRadius="10dp"
                tools:ignore="TextContrastCheck" />
        </RelativeLayout>
    </ScrollView>



    <RelativeLayout
        android:id="@+id/routeSettings"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal"
        android:layout_marginBottom="60dp"
        app:layout_constraintBottom_toBottomOf="parent" >

        <Button
            android:id="@+id/createOwnRoute"
            android:layout_width="180dp"
            android:layout_height="48dp"
            android:layout_centerInParent="true"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="5dp"
            android:backgroundTint="@color/green_shade_1"
            android:elevation="5dp"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:stateListAnimator="@null"
            android:text="@string/start_route"
            android:textColor="@color/white_shade_1"
            android:visibility="invisible"
            app:cornerRadius="10dp"
            tools:ignore="TextContrastCheck" />

    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>